Backend/infra/envoy/nf-configs/nrf.yaml
# Envoy sidecar for the NRF: terminates mTLS on the SBI port, forwards the
# client cert CN downstream, proxies cleartext to the local NRF process.
static_resources:
  listeners:
    - name: sbi
      address: { socket_address: { address: 0.0.0.0, port_value: 8000 } }
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain: { filename: /certs/nrf/tls.crt }
                    private_key: { filename: /certs/nrf/tls.key }
                validation_context:
                  trusted_ca: { filename: /certs/ca.crt }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: nrf_sbi
                forward_client_cert_details: sanitize_set
                set_current_client_cert_details: { subject: true }
                route_config:
                  virtual_hosts:
                    - name: nrf
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nrf_local }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: nrf_local
      connect_timeout: 2s
      type: STATIC
      load_assignment:
        cluster_name: nrf_local
        endpoints:
          - lb_endpoints:
              - endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 8080 } } }
